# AoC

./: .gitignore  README.md  bazel-AoC  bazel-bin  bazel-out  bazel-testlogs  test_Day10Part1
Day1/: BUILD.bazel  Day1Part1.c  Day1Part2.c
Day10/: .bazelrc  BUILD.bazel  Day10Part1.c  Day10Part2.c
Day2/: BUILD.bazel  Day2Part1.c  Day2Part2.c
Day3/: BUILD.bazel  Day3Part1.c  Day3Part2.c
Day4/: BUILD.bazel  Day4Part1.c  Day4Part2.c
Day5/: BUILD.bazel  Day5Part1.c  Day5Part2.c
Day6/: BUILD.bazel  Day6Part1.c  Day6Part2.c
Day7/: BUILD.bazel  Day7Part1.c  Day7Part2.c
Day8/: BUILD.bazel  Day8Part1.c  Day8Part2.c
Day9/: BUILD.bazel  Day9Part1.c  Day9Part2.c
src/Day1/: Day1Part1.c  Day1Part2.c
src/Day10/: BUILD.bazel  Day10Part1.c  Day10Part1.h  Day10Part1NoUnitTest.c  Day10Part2.c
src/Day2/: Day2Part1.c  Day2Part2.c
src/Day3/: Day3Part1.c  Day3Part2.c
src/Day4/: Day4Part1.c  Day4Part2.c
src/Day5/: Day5Part1.c  Day5Part2.c
src/Day6/: Day6Part1.c  Day6Part2.c
src/Day7/: Day7Part1.c  Day7Part2.c
src/Day8/: Day8Part1.c  Day8Part2.c
src/Day9/: BUILD.bazel  Day9Part1.c  Day9Part2.c
test/: BUILD.bazel  TestDay10Part1.c  test.c
