load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Day1Part1",
    srcs = ["Day1Part1.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c90"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
)

cc_binary(
    name = "Day1Part2",
    srcs = ["Day1Part2.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c90"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
)