load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Day10Part1",
    srcs = ["Day10Part1.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    data = ["input.txt"],
)

cc_binary(
    name = "Day10Part2",
    srcs = ["Day10Part2.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    data = ["input.txt"],
)