load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Day5Part1",
    srcs = ["Day5Part1.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)
cc_binary(
    name = "Day5Part2",
    srcs = ["Day5Part2.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)