load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Day8Part1",
    srcs = ["Day8Part1.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)

cc_binary(
    name = "Day8Part2",
    srcs = ["Day8Part2.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)