load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Day9Part1",
    srcs = ["Day9Part1.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)

cc_binary(
    name = "Day9Part2",
    srcs = ["Day9Part2.c"],
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],
    data = ["input.txt"],
)